# apidom-rust

./: .gitignore  Cargo.toml  SCHEMA_DTO_REFACTOR_SUMMARY.md  SCHEMA_DTO_SUMMARY.md  builder-registry-spec.md
apidom-dto-derive/: Cargo.toml
apidom-dto-derive/apidom-dto-core/: Cargo.toml
apidom-dto-derive/src/: lib.rs
apidom-dto-derive/tests/: extensions_test.rs  frb_conversion_test.rs  frb_test.rs
apidom-ns-openapi-3-0/: Cargo.toml  URL_BUILDER_SUMMARY.md
apidom-ns-openapi-3-0/examples/: complete_openapi_pipeline.rs  comprehensive_pipeline_demo.rs  dto_architecture_demo.rs  enhanced_components_demo.rs  specification_usage.rs  url_building_demo.rs  url_extraction.rs  url_usage_guide.rs
apidom-ns-openapi-3-0/src/: build_openapi_3_0.rs  extensible_framework.rs  fold.rs  fold_pass.rs  lib.rs  patterned_fields.rs  reference_resolver.rs  specification.rs  url.rs  url_builder.rs
apidom-ns-openapi-3-0/src/builder/: callback_builder.rs  components_builder.rs  contact_builder.rs  discriminator_builder.rs  discriminator_mapping_builder.rs  encoding_builder.rs  encoding_headers_builder.rs  example_builder.rs  external_documentation_builder.rs  header_builder.rs  info_builder.rs  license_builder.rs  link_builder.rs  media_type_builder.rs  mod.rs  oauth_flow_builder.rs  oauth_flows_builder.rs  openapi3_0_builder.rs  openapi_builder.rs  operation_builder.rs  parameter_builder.rs  path_item_builder.rs  paths_builder.rs  reference_builder.rs  request_body_builder.rs  response_builder.rs  responses_builder.rs  schema_builder.rs  security_requirement_builder.rs  security_scheme_builder.rs  server_builder.rs  server_variable_builder.rs  tag_builder.rs  xml_builder.rs
apidom-ns-openapi-3-0/src/dto/: conversion.rs  example.rs  info.rs  mod.rs  openapi.rs  schema.rs
apidom-ns-openapi-3-0/src/elements/: callback.rs  components.rs  contact.rs  discriminator.rs  discriminator_mapping.rs  encoding.rs  encoding_headers.rs  example.rs  external_documentation.rs  header.rs  info.rs  license.rs  link.rs  media_type.rs  mod.rs  (+19 more)
apidom-ns-openapi-3-0/tests/: comprehensive_functionality_test.rs  end_to_end_coverage_test.rs  enhanced_coverage_test.rs  enhanced_functionality_test.rs  petstore_cst_test.rs
apidom-ns-openapi-3-1/: Cargo.toml  FIELD_EXTRACTOR.md  PROJECT_SUMMARY.md  README.md
apidom-ns-openapi-3-1/examples/: openapi_3_1_demo.rs  performance_demo.rs
apidom-ns-openapi-3-1/src/: builder.rs  builder_dispatch.rs  context.rs  elements.rs  error.rs  field_extractor.rs  field_registry.rs  lib.rs  registry.rs  schema_loader.rs  validator.rs
(+64 files in other folders)
