[package]
name = "apidom-dto-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros for apidom DTO conversion"

[lib]
proc-macro = true

[dependencies]
apidom-dto-core = { path = "../apidom-dto-core" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
apidom-ast = { path = "../apidom-ast" }
serde_json = "1.0" 