[package]
name = "apidom-ns-openapi-3-0"
version = "0.1.0"
edition = "2024"

[dependencies]
apidom-ast = { path = "../apidom-ast" }
apidom-cst = { path = "../apidom-cst" }
apidom-ns-json-schema-draft-4 = { path = "../apidom-ns-json-schema-draft-4" }
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.10"
serde_json = "1.0.140"
urlencoding = "2.1"
