[package]
name = "apidom-ns-openapi-3-0"
version = "0.1.0"
edition = "2024"

[dependencies]
apidom-ast = { path = "../apidom-ast" }
apidom-cst = { path = "../apidom-cst" }
apidom-ns-json-schema-draft-4 = { path = "../apidom-ns-json-schema-draft-4" }
apidom-dto-core = { path = "../apidom-dto-core" }
apidom-dto-derive = { path = "../apidom-dto-derive" }
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
urlencoding = "2.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4.1"

[[example]]
name = "dto_architecture_demo"
path = "examples/dto_architecture_demo.rs"